fixed pom.xml (issue #649)